@@ -1,6 +1,9 @@
 --- CHANGELOG ---
 
 --- PyFMI-2.5.X ---
+    * Fixed issue with log messages during the FMI methods terminate /
+      free instance.
+    * Removed caching on the get_variable_nominal method
     * Added a logging module (for parsing XML based FMU logs)
     * Fixed issue with the estimation of directional derivatives when
       the number of outputs was less than the number of states
